KSENROLL-12927 fix to align the toolbar poup action buttons
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@70273 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/enroll.less
@@ -1294,8 +1294,8 @@ div.jGrowl div.WARNING div.jGrowl-message {
 /* Acal radio buttons for key dates and events */
 .ks_toolbar_popup_action_button {
   font-size: 0.92307692307692em;
-  height: 25px;
-  margin-top: 2.0em;
+  height: 26px;
+  margin-top: 1.7em;
   min-width: 50px;
 }
 
